# comet

./: CMakeLists.txt  Examples.txt  README.md  compile_notes.txt  notes.txt  readme.md
ATTIC/magma-1.6.2-minproduct/magmablas/: dgemm_tesla_T_N.cu
build_tools/: configure_all.sh  make_all.sh  test_all.sh
czek/: Makefile  czek.c  czek.h  main.c  make.sh  run.sh  run2.sh
czek_prototype/: czek.c  run.sh
doc/: Quick_Start.txt  code_levelization.txt  overview.txt
driver/: Makefile  driver.cc  driver.hh  driver_utils.cc  driver_utils.h  driver_utils.hh  genomics_metric.c  genomics_metric.cc  input_output.cc  input_output.hh  make.sh  metrics_io.cc  metrics_io.hh  run.sh  test_problems.cc  test_problems.hh  vectors_io.cc  vectors_io.hh
magma/: .gitignore  README.md  clone_magma  clone_magma.sh  create_modified_magmas.sh  infer_patch.sh  magma_minproduct  magma_tally2  magma_tally2.patch  magma_tally3  magma_tally3.patch  magma_tally4  magma_tally4.patch  make.inc.summit  make.inc.titan  make.mk  make.sh  make_magma.sh  patch_magma.sh  readme.md
magma/magma_minproduct-1.6.2/: CMakeLists.txt  Makefile  Makefile.internal  README  README-Windows  ReleaseNotes  make.inc.acml  make.inc.atlas  make.inc.goto  make.inc.macos  make.inc.mkl-gcc  make.inc.mkl-gcc-ilp64  make.inc.mkl-icc  make.inc.mkl-icc-ilp64  make.inc.openblas
magma/magma_minproduct-1.6.2/blas_fix/: Makefile
magma/magma_minproduct-1.6.2/control/: CMake  Makefile  Makefile.src  affinity.cpp  affinity.h  auxiliary.cpp  batched_kernel_param.h  bulge_auxiliary.cpp  common_magma_minproduct.h  connection_mgpu.cpp  constants.cpp  cpanel_to_q.cpp  cprint.cpp  dpanel_to_q.cpp  dprint.cpp  get_nb.cpp  ilaenv.cpp  ilaenv_f77.f  magma_minproduct.f90  magma_minproduct_cf77.cpp  magma_minproduct_cfortran.F90  magma_minproduct_cnan_inf.cpp  magma_minproduct_df77.cpp  magma_minproduct_dfortran.F90  magma_minproduct_dfortran.mod  magma_minproduct_dnan_inf.cpp  magma_minproduct_f77.cpp  magma_minproduct_param.f90  magma_minproduct_param.mod  magma_minproduct_sf77.cpp  magma_minproduct_sfortran.F90  magma_minproduct_sfortran.mod  magma_minproduct_snan_inf.cpp  magma_minproduct_threadsetting.cpp  magma_minproduct_threadsetting.h  magma_minproduct_timer.cpp  magma_minproduct_timer.h  magma_minproduct_zf77.cpp  magma_minproduct_zf77pgi.cpp  magma_minproduct_zfortran.F90  (+18 more)
magma/magma_minproduct-1.6.2/docs/: Doxyfile  contributors-guide.txt  defgroup  documentation-sparse.txt  documentation.txt  doxygen-modules.h  ingroup  magma_minproduct_strip  output_err
magma/magma_minproduct-1.6.2/example/: Makefile  README.txt  example.c  zfill.c  zfill.h
magma/magma_tally2-1.6.2/: CMakeLists.txt  Makefile  Makefile.internal  README  README-Windows  ReleaseNotes  make.inc  make.inc.acml  make.inc.atlas  make.inc.goto  make.inc.macos  make.inc.mkl-gcc  make.inc.mkl-gcc-ilp64  make.inc.mkl-icc  make.inc.mkl-icc-ilp64  make.inc.openblas
magma/magma_tally3-1.6.2/: CMakeLists.txt  Makefile  Makefile.internal  README  README-Windows  ReleaseNotes  make.inc.acml  make.inc.atlas  make.inc.goto  make.inc.macos  make.inc.mkl-gcc  make.inc.mkl-gcc-ilp64  make.inc.mkl-icc  make.inc.mkl-icc-ilp64  make.inc.openblas
magma/magma_tally4-1.6.2/: CMakeLists.txt  Makefile  Makefile.internal  README  README-Windows  ReleaseNotes  make.inc  make.inc.acml  make.inc.atlas  make.inc.goto  make.inc.macos  make.inc.mkl-gcc  make.inc.mkl-gcc-ilp64  make.inc.mkl-icc  make.inc.mkl-icc-ilp64  make.inc.openblas
magma_patch/: README.md  _platform_init.sh  clone_magma.sh  create_modified_magmas.sh  infer_patch.sh  magma_mgemm2-1.6.2.patch  magma_mgemm2-f50e717b.patch  magma_mgemm2.patch  magma_mgemm3-f50e717b.patch  magma_mgemm3.patch  magma_mgemm4-1.6.2.patch  magma_mgemm4-f50e717b.patch  magma_mgemm4.patch  magma_mgemm5-f50e717b.patch  magma_mgemm5.patch  magma_minproduct-f50e717b.patch  magma_minproduct.patch  make.inc.frontier  make.inc.summit  make_magma.sh  patch_magma.sh
run_data/: compile_all.sh  run_comet.sh
scripts/: README.md  _platform_init.sh  cmake.sh  configure_all.sh  format_source.sh  make.sh  make_all.sh  make_magma.sh  run.sh  scaling_weak_summit_2way.sh  scaling_weak_summit_3way.sh  scaling_weak_summit_3way_v2.sh  test_all.sh
src/: assertions.cc  assertions.hh  assertions.i.hh  checksum.cc  checksum.hh  checksums.cc  checksums.hh  comm_xfer_utils.cc  comm_xfer_utils.hh  compressed_buf.cc  compressed_buf.hh  compressed_buf.i.hh  compute_metrics.c  compute_metrics.cc  compute_metrics.h  compute_metrics.hh  compute_metrics_2way.cc  compute_metrics_2way.h  compute_metrics_2way.hh  compute_metrics_2way_block.hh  compute_metrics_2way_block_combine.cc  compute_metrics_2way_block_combine.hh  compute_metrics_2way_block_finalize.cc  compute_metrics_2way_block_nums.cc  compute_metrics_2way_block_nums.hh  compute_metrics_2way_proc_combine.cc  compute_metrics_2way_proc_combine.hh  compute_metrics_2way_proc_nums.cc  compute_metrics_2way_proc_nums.hh  compute_metrics_3way.cc  compute_metrics_3way.h  compute_metrics_3way.hh  compute_metrics_3way_block.cc  compute_metrics_3way_block.hh  compute_metrics_3way_block_gpu.cc  compute_metrics_3way_block_gpu.hh  compute_metrics_3way_block_linalg.cc  compute_metrics_3way_block_nongpu.cc  compute_metrics_3way_block_nongpu.hh  compute_metrics_3way_block_nonlinalg.cc  (+108 more)
testing/: basic_test.cc  driver_test.cc  env_test.cc  metrics_test.cc  perf_test.cc  system_test.cc
tools/: CoMet_Settings_Tool.xlsx  Makefile  README.txt  allele_labels.sh  ccc_duo_validate.cc  ccc_validate_all.sh  labels.sh  line_labels.sh  make.sh  make_tped_example.sh  postprocess.cc  postprocess_all.sh  postprocess_file.c  preprocess.c  preprocess.cc  preprocess_validate.cc  settings_advisor  settings_advisor_test.sh  test.sh  validate.cc  validate_all.sh
tools/ATTIC/: a2i.c  make.sh  settings_advisor
tools/network_info/: Makefile  Makefile_get_info  Makefile_omp_id  get_close_gpu.sh  get_info.cu  omp_id.c  process_info.sh  put_to_first_core.sh  run_info_batch.sh  run_info_batch_juwels.sh  split_mask.sh
tools2/: README.txt
tpls/: README.md
(+11496 files in other folders)
